# django-db-backups

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
django_db_backups/: admin.py  apps.py  conf.py  models.py  utils.py
django_db_backups/management/commands/: dbbackup.py  dbrestore.py  get_dropbox_token.py  mediabackup.py  mediarestore.py  update_backup_cron.py
django_db_backups/migrations/: 0001_initial.py  0002_mediabackuprecord_mediarestorerecord.py
django_db_backups/services/: backup.py  cron.py  dropbox_storage.py  lock.py  media_backup.py  media_restore.py  restore.py  retention.py
django_db_backups/templates/admin/django_db_backups/backuprecord/: change_list.html  upload_restore.html
django_db_backups/templates/admin/django_db_backups/mediabackuprecord/: change_list.html  media_upload_restore.html
testproject/: .example.env  settings.py
testproject/tests/: test_admin.py  test_backup.py  test_conf.py  test_cron.py  test_dropbox_storage.py  test_lock.py  test_media.py  test_restore.py  test_retention.py
